Fixed overflow for smaller screens

--- a/src/scripts/test/test-entity-data/app-test-entity-data.less
+++ b/src/scripts/test/test-entity-data/app-test-entity-data.less
@@ -18,6 +18,7 @@
         padding: 8px;
         text-align: center;
         width: 500px;
+        max-height: 80vh;
 
         >h2 {
             display: flex;
